fix: Autocomplete-hint is now perfectly aligned

--- a/styles.css
+++ b/styles.css
@@ -52,6 +52,8 @@ main {
 	width: 100%;
 	align-items: center;
 	margin-top: 10px;
+
+	position: relative;
 }
 
 .input-prompt {
@@ -65,6 +67,8 @@ main {
 	outline: none;
 	border: none;
 	box-shadow: none;
+
+	width: 100%;
 
 	margin-left: 12px;
 	font-size: 2rem;
@@ -125,5 +129,9 @@ input:focus {
 }
 
 #autocomplete-hint {
-	color: white;
+	color: rgba(0, 255, 153, 0.5);
+	white-space: pre;
+	font-size: 2rem;
+	position: absolute;
+	margin-left: 35px;
 }
